--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "sourcefinder",
+  "name": "jsmapfinder",
   "version": "1.0.0",
   "description": "Javascript sourcemaps enumeration tool",
   "main": "src/index.js",
-  "scripts": {},
+  "bin": "src/index.js",
+  "scripts": {
+    "start": "src/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/marcotuliocnd/sourcefinder.git"
